// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> should match snapshot 1`] = `
.c1 {
  width: 100%;
  border: none;
  height: 8px;
}

.c1.c1,
.c1::-webkit-progress-value,
.c1[value]::-webkit-progress-bar,
.c1:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c1:not(value)::-moz-progress-bar,
.c1[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c1:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c1::-webkit-progress-value {
  background-color: #F46152;
}

.c1.c1,
.c1:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c1[value]::-moz-progress-bar {
  background-color: #F46152;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c2 {
  max-width: 280px;
  margin-top: 4px;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1"
      max="1"
    />
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1"
      max="100"
    />
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1"
      max="100"
      value="60"
    />
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with label number 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #F46152;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #F46152;
}

.c4 {
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 .c3 {
  max-width: 280px;
  margin-top: 4px;
}

.c7 .c3 {
  max-width: 280px;
  margin-top: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c3 {
  width: 22px;
  margin-right: 8px;
}

.c0 .c1 {
  margin: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  text-align: right;
}

.c5 .c3 {
  width: 22px;
  margin-left: 8px;
}

.c5 .c1 {
  margin: auto;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
      value="20"
    />
    <label
      class="c3 c4"
    >
      20
    </label>
  </div>
  <div
    class="c5"
  >
    <progress
      class="c1 c2"
      max="100"
      value="65"
    />
    <label
      class="c3 c4"
    >
      65
    </label>
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with label string 1`] = `
.c1 {
  width: 100%;
  border: none;
  height: 8px;
}

.c1.c1,
.c1::-webkit-progress-value,
.c1[value]::-webkit-progress-bar,
.c1:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c1:not(value)::-moz-progress-bar,
.c1[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c1:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c1::-webkit-progress-value {
  background-color: #F46152;
}

.c1.c1,
.c1:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c1[value]::-moz-progress-bar {
  background-color: #F46152;
}

.c3 {
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c2 {
  max-width: 280px;
  margin-top: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  text-align: right;
}

.c4 .c2 {
  max-width: 280px;
  margin-top: 4px;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1"
      max="100"
    />
    <label
      class="c2 c3"
    >
      Some decription here
    </label>
  </div>
  <div
    class="c4"
  >
    <progress
      class="c1"
      max="100"
      value="65"
    />
    <label
      class="c2 c3"
    >
      Some decription here
    </label>
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with secondary variant prop 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #652CDB;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #652CDB;
}

.c4 {
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 .c3 {
  max-width: 280px;
  margin-top: 4px;
}

.c6 .c3 {
  max-width: 280px;
  margin-top: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c3 {
  width: 22px;
  margin-right: 8px;
}

.c0 .c1 {
  margin: auto;
}

.c7 .c3 {
  width: 22px;
  margin-left: 8px;
}

.c7 .c1 {
  margin: auto;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
      value="20"
    />
    <label
      class="c3 c4"
    >
      20
    </label>
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with tertiary variant prop 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #22766B;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #22766B;
}

.c4 {
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 .c3 {
  max-width: 280px;
  margin-top: 4px;
}

.c6 .c3 {
  max-width: 280px;
  margin-top: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c3 {
  width: 22px;
  margin-right: 8px;
}

.c0 .c1 {
  margin: auto;
}

.c7 .c3 {
  width: 22px;
  margin-left: 8px;
}

.c7 .c1 {
  margin: auto;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
      value="20"
    />
    <label
      class="c3 c4"
    >
      20
    </label>
  </div>
</div>
`;
